# lexhost

./: .gitignore  LICENSE  README.md  app.py  index_admin.py  manage.py  pyproject.toml  readme.rst  requirements.txt  settings.py  utils.py  wsgi.py
bot_api/: __init__.py  routes.py  views.py
bot_api/tests/: test_views.py
docs/: FAQ.rst
gruntjs/: Gruntfile.js  package.json
legislative_act/: es_settings.py  history.py  model.py  provider.py  receiver.py  searcher.py  toccordior.py
legislative_act/tests/: test_provider.py  test_receiver.py  test_searcher.py  test_toccordior.py  test_versioning.py
legislative_act/utils/: __init__.py  generics.py  htm.py  language_generation.py
lexhost/: asgi.py  urls.py  utils.py  wsgi.py
lexhost/apps/: dbmap.py  legacy.py  nationals.py  read.py
lexhost/tests/: test_national_refs.py  test_short_text_creation.py
scripts/: ids_local_dev.csv
scripts/bash/: back_it_up.sh  checkrun_elasticsearch.sh  dump_dev_data.sh  es.sh  es_backup.sh  migrate_index.sh  post_doc.sh  run_script.sh  setup.sh  setup_doqh.sh  to_master.sh  update.sh  upload.sh  upload_test_data.sh
scripts/py/: celex_2_versions.py  create_index.py  delete_nat_refs.py  dump_document.py  fix_abstract_version.py  full_botapi_dump.py  load_dump.py  log_analysis.py  prioritize_crawler.py  (+4 more)
static/: .htaccess  botapi_doc.schema.json
templates/: about.html  base.html  base_sidebared.html  data_protection.html  faq.html  read_article.html  read_overview.html
views/: dbmap.py  exceptions.py  land.py  nationals.py  read.py  sitemapping.py  standard_messages.py
(+153 files in other folders)
